This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.6 - not released yet
========================
+ Formats: The space key can now be used to enable/disable formats
+ Miscellaneous: Added button to export key bindings
+ Add the ability to choose the scale factor (relative to the screen size) for
  the auto-fit zoom
+ Internal Subtitles Renderer: Show all subtitles tracks in the Play > Subtitles menu.
  That includes all the embedded tracks exhibited by the source filter and the external tracks.
+ Tickets #1025, #1054, Add the ability to select the default track directly by its number
  in MPC-HC and the standalone MPEG Splitter.
* UI: Use a more native look and feel for the options dialog tree
* Ticket #1620, UI: Use the new styled radio bullet for menu's items
* Updated FFmpeg (n0.8-17442-g7d66bc7)
* Updated Little CMS to v2.4 (git 310db3d)
* Updated Logitech SDK to v3.01 (driver 8.00.100)
* Updated SoundTouch to v1.7.1 r170
* Updated Basque, German, Russian, Simplified Chinese and Ukrainian translations
* More resilient support for MPL2 and SRT subtitles formats:
  - Ticket #2779, Support MicroDVD tags in MPL2 subtitles files. This is normally not
    supported but MPL2 files that use MicroDVD tags for formatting are quite common.
  - Support SRT files with missing millisecond part in the timecodes.
! Ticket #2423, Fix wrong rounding leading to small black bars when resizing the window.
  This was mostly visible when using the "auto-fit" zoom or when resizing manually.
! Ticket #2783, Fix crash when generating the chapter marks.
! Ticket #2805, AviSplitter: Fix a crash when closing the file while re-indexing.